--- a/Data Analysis & Visualization/Homework/Graph.ipynb
+++ b/Data Analysis & Visualization/Homework/Graph.ipynb
@@ -7,10 +7,13 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
+    "\n",
+    "Abdul Saboor\n",
+    "20L-1113\n",
+    "BDS-5A\n",
+    "\n",
     "Task to do is:\n",
-    "make dfs and bfs in python\n",
-    "convert to a tree with root\n",
-    "find path\n",
+    "make dfs and bfs in python with oop approach\n",
     "populate graph\n",
     "\n",
     "ternary operators\n",
@@ -20,92 +23,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# practicing python object oriented programming\n",
-    "class car:\n",
-    "    def __init__(self, company, model):\n",
-    "        self.company=company\n",
-    "        self.model=model\n",
-    "    \n",
-    "    def print(self,miles):\n",
-    "        print(f\"{self.company} {self.model} has been driven {miles} miles.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lamborghini aventador SVJ has been driven 10000 miles.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# class testing code\n",
-    "car1=car('lamborghini','aventador SVJ')\n",
-    "car1.print(10000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Graph Implemetation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# defining class for graph\n",
-    "\n",
-    "from collections import defaultdict # importing data structure to use\n",
-    "\n",
+    "# defining class\n",
     "class graph:\n",
-    "    def __init__(self): # constructor that creates a list of dictionaries\n",
-    "        self.graph=defaultdict(list)\n",
+    "    def __init__(self):\n",
+    "        self.graph={} # deictionery for graph representation\n",
     "    \n",
-    "    def addEdge(self,node,vertex): # setter function to define input\n",
-    "        self.graph[node].append(vertex)\n",
-    "    \n",
-    "    # BFS implementation\n",
-    "    def BFS(self, s):\n",
-    " \n",
-    "        visited = [False for i in range(max(self.graph) + 1)] # a list for checking the visited\n",
-    " \n",
-    "        queue = [] # queue for BFS\n",
-    " \n",
-    "        # Mark the source node as\n",
-    "        # visited and enqueue it\n",
-    "        queue.append(s)\n",
-    "        visited[s] = True\n",
-    " \n",
+    "    def add(self,n,v):\n",
+    "        # This function will populate our graph\n",
+    "        # checking and adding node\n",
+    "        if n in self.graph:\n",
+    "            if v not in self.graph[n]: # checking for duplicates\n",
+    "                self.graph[n].append(v)\n",
+    "        else:\n",
+    "            self.graph[n]=[v]\n",
+    "        # checking and adding vertex\n",
+    "        if v in self.graph:\n",
+    "            if n not in self.graph[v]: # checking for duplicates\n",
+    "                self.graph[v].append(n)\n",
+    "        else:\n",
+    "            self.graph[v]=[n]\n",
+    "\n",
+    "    # BFS implentation\n",
+    "    def BFS(self,source):\n",
+    "        # defining local structs to use\n",
+    "        visited=[False for i in range(max(self.graph)+1)]\n",
+    "        queue=[]\n",
+    "\n",
+    "        # queueing and marking source\n",
+    "        queue.append(source)\n",
+    "        visited[source]=True\n",
+    "\n",
+    "        # checking for all the neighbours\n",
     "        while queue:\n",
     " \n",
     "            # Dequeue a vertex from queue and print it\n",
-    "            s = queue.pop(0)\n",
-    "            print (s, end = \" \")\n",
+    "            source = queue.pop(0)\n",
+    "            print (source, end = \" \")\n",
     " \n",
-    "            # Get all adjacent vertices of the dequeued vertex s. If a adjacent\n",
+    "            # Get all adjacent vertices of the dequeued vertex s. If an adjacent\n",
     "            # has not been visited, then mark it visited and enqueue it\n",
-    "            for i in self.graph[s]:\n",
+    "            for i in self.graph[source]:\n",
     "                if visited[i] == False:\n",
     "                    queue.append(i)\n",
     "                    visited[i] = True\n",
     "\n",
-    "    # DFS Implementation\n",
+    "    # DFS Implementation (Recursive)\n",
     "    def DFSUtil(self, v, visited):\n",
     "        # Mark the current node as visited and print it\n",
-    "        visited.add(v)\n",
+    "        visited.append(v)\n",
     "        print(v,end=\" \")\n",
     "\n",
     "        # recur for all the vertices adjacent to this vertex\n",
@@ -116,7 +85,7 @@
     "\n",
     "    def DFS(self):\n",
     "        # create a set to store all visited vertices\n",
-    "        visited = set()\n",
+    "        visited = []\n",
     "        # call the recursive helper function to print DFS traversal starting from all\n",
     "        # vertices one by one\n",
     "        for vertex in self.graph:\n",
@@ -126,37 +95,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Following is Breadth First Traversal (starting from vertex 2)\n",
-      "2 0 3 1 "
+      "2 0 1 3 "
      ]
     }
    ],
    "source": [
-    "# Create a graph given in\n",
-    "# the above diagram\n",
+    "# creating and populating a graph\n",
     "g = graph()\n",
-    "g.addEdge(0, 1)\n",
-    "g.addEdge(0, 2)\n",
-    "g.addEdge(1, 2)\n",
-    "g.addEdge(2, 0)\n",
-    "g.addEdge(2, 3)\n",
-    "g.addEdge(3, 3)\n",
-    " \n",
-    "print (\"Following is Breadth First Traversal\"\n",
-    "                  \" (starting from vertex 2)\")\n",
+    "g.add(0, 1)\n",
+    "g.add(0, 2)\n",
+    "g.add(1, 2)\n",
+    "g.add(2, 0)\n",
+    "g.add(2, 3)\n",
+    "g.add(3, 3)\n",
+    "\n",
     "g.BFS(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
