--- a/Data Analysis & Visualization/Homework/Graph.ipynb
+++ b/Data Analysis & Visualization/Homework/Graph.ipynb
@@ -7,23 +7,15 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "\n",
     "Abdul Saboor\n",
     "20L-1113\n",
     "BDS-5A\n",
-    "\n",
-    "Task to do is:\n",
-    "make dfs and bfs in python with oop approach\n",
-    "populate graph\n",
-    "\n",
-    "ternary operators\n",
-    "python operators and data structures\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 0 1 3 "
+      "{0: [1, 2], 1: [0, 2], 2: [0, 1, 3], 3: [2, 3]}\n"
      ]
     }
    ],
@@ -116,12 +108,29 @@
     "g.add(2, 3)\n",
     "g.add(3, 3)\n",
     "\n",
-    "g.BFS(2)"
+    "print(g.graph)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 2 0 1 "
+     ]
+    }
+   ],
+   "source": [
+    "g.BFS(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
