--- a/Data Analysis & Visualization/Lab/Lab-8/20l1113.ipynb
+++ b/Data Analysis & Visualization/Lab/Lab-8/20l1113.ipynb
@@ -517,6 +517,15 @@
     "df = pd.DataFrame({'features': features[:,1], 'labels': labels, 'sigmoid': predict(features, weights), 'error': labels-predictions, 'y_pred': predictions})\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# appending the column in the data frame"
+   ]
   }
  ],
  "metadata": {
